# erp-doc-automation

./: .gitignore  DEVELOPER_GUIDE.md  README.md  overview.md  package-lock.json
.github/workflows/: dev.yml  main.yml
backend/: .env.example  README.md  install_deps.py  migrate_add_erp_fields.py  pyproject.toml  requirements.txt  tmp_schema_check.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: articles.py  auth.py  customers.py  health.py  orders.py  router.py
backend/app/core/: __init__.py  error_handlers.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  demo_seed.py  init_db.py  session.py
backend/app/models/: __init__.py  article.py  base.py  customer.py  order.py  refresh_token.py  user.py
backend/app/prompts/: __init__.py  order_extraction.py
backend/app/schemas/: article_import.py  auth.py  customer.py  extraction.py  order.py
backend/app/services/: __init__.py  article_import_service.py  auth_service.py  blob_storage.py  customer_service.py  erp_push_service.py  oauth_service.py  order_service.py  pdf_extraction.py  xml_generator.py
backend/tests/: conftest.py  test_api_auth.py  test_api_orders.py  test_auth.py  test_pdf_extraction.py  test_services_pdf_extraction.py  test_services_xml_generator.py  test_xml_generator.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: articles.ts  auth.ts  client.ts  (+1 more)
(+17 files in other folders)
